--- a/assets/scss/components/_frame.scss
+++ b/assets/scss/components/_frame.scss
@@ -3,5 +3,18 @@
 }
 
 .Frame-body {
-  height: calc(100% - 64px);
+  //overflow: visible;
 }
+
+.Frame-inner {
+  //overflow: visible;
+}
+
+.Frame-panel {
+  //overflow: visible;
+}
+
+.Frame {
+  //overflow: visible;
+}
+
