--- a/assets/scss/components/_frame.scss
+++ b/assets/scss/components/_frame.scss
@@ -2,19 +2,10 @@
   background-color: #f1f1f2;
 }
 
-.Frame-body {
-  //overflow: visible;
+.au-body path {
+  stroke: none;
 }
 
-.Frame-inner {
-  //overflow: visible;
+main, aside {
+  margin: 3em 0;
 }
-
-.Frame-panel {
-  //overflow: visible;
-}
-
-.Frame {
-  //overflow: visible;
-}
-
