--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,6 +2,7 @@
 
 @import 'helpers/text';
 
+@import "components/core";
 @import "components/header";
 @import "components/preview";
 @import "components/prose";
