Added body padding and box-shadow

--- a/assets/scss/components/_frame.scss
+++ b/assets/scss/components/_frame.scss
@@ -2,6 +2,11 @@
   background-color: #f1f1f2;
 }
 
+.au-body {
+  padding: 30px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
+
 .au-body path {
   stroke: none;
 }
